# backpack-handle-example

./: README.md
backpack-handle/: CHANGELOG.md  LICENSE  backpack-handle.cabal
backpack-handle/domain/: WeatherProvider.hsig  WeatherReporter.hs
backpack-handle/test/: Test.hs
backpack-handles/: Main.hs  backpack-handles.cabal
backpack-handles/domain/: WeatherReporter.hsig
backpack-handles/impl/: SuperWeatherProvider.hs  SuperWeatherReporter.hs
backpack-handles/test/: Test.hs
backpack-handles/test-impl/: TestWeatherProvider.hs
records-handle/: Main.hs  records-handle.cabal
records-handle/domain/: WeatherProvider.hs  WeatherReporter.hs
records-handle/impl/: SuperWeatherProvider.hs
records-handle/test/: Test.hs
records-handle/test-impl/: TestWeatherProvider.hs
simple/: Main.hs  simple.cabal
simple-handle/: Main.hs  simple-handle.cabal
simple-handle/domain/: WeatherProvider.hs  WeatherReporter.hs
simple/domain/: WeatherProvider.hs  WeatherReporter.hs
vinyl-handle/: Main.hs  vinyl-handle.cabal
vinyl-handle/domain/: HandleRec.hs  QueryTypes.hs  TemperatureProvider.hs  WeatherProvider.hs  WeatherReporter.hs  WindProvider.hs
vinyl-handle/impl/: SuperTemperatureProvider.hs  SuperWeatherProvider.hs  SuperWindProvider.hs
vinyl-handle/test/: Test.hs
vinyl-handle/test-impl/: TestWeatherProvider.hs
