cabal-version:       >=2
name:                backpack-handles
version:             0.1.0.0
license-file:        LICENSE
author:              Evgenii Akentev
maintainer:          i@ak3n.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library domain-provider
  hs-source-dirs: domain
  signatures:      WeatherProvider
  default-language: Haskell2010
  build-depends:    base

library domain-reporter
  hs-source-dirs: domain
  signatures:      WeatherReporter
  default-language: Haskell2010
  build-depends:    base, domain-provider

library impl-provider
  hs-source-dirs: impl
  exposed-modules: SuperWeatherProvider
  reexported-modules: SuperWeatherProvider as WeatherProvider
  default-language: Haskell2010
  build-depends:    base

library impl-reporter
  hs-source-dirs: impl
  exposed-modules: SuperWeatherReporter
  reexported-modules: SuperWeatherReporter as WeatherReporter
  default-language: Haskell2010
  build-depends:    base, domain-provider

library test-provider
  hs-source-dirs: test-impl
  exposed-modules: TestWeatherProvider
  reexported-modules: TestWeatherProvider as WeatherProvider
  default-language: Haskell2010
  build-depends:    base

executable main
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , impl-provider
                     , impl-reporter
                     , domain-reporter
                     , domain-provider
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language:   Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
                     , domain-reporter
                     , domain-provider
                     , test-provider
                     , impl-reporter
