cabal-version:       >=2
name:                simple-handle
version:             0.1.0.0
license-file:        LICENSE
author:              Evgenii Akentev
maintainer:          i@ak3n.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library domain
  hs-source-dirs: domain
  exposed-modules: WeatherProvider
                 , WeatherReporter
  default-language: Haskell2010
  build-depends:    base

executable simple-handle-exe
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , domain
  default-language:    Haskell2010
